log
Fri Mar 26 18:58:37 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:45: error: expected expression before ‘)’ token
   List * lista = (List *)calloc(NULL, (List));
                                             ^
list.c:32:33: error: passing argument 1 of ‘calloc’ makes integer from pointer without a cast [-Werror=int-conversion]
   List * lista = (List *)calloc(NULL, (List));
                                 ^~~~
In file included from test.c:2:0:
/usr/include/stdlib.h:541:14: note: expected ‘size_t {aka long unsigned int}’ but argument is of type ‘void *’
 extern void *calloc (size_t __nmemb, size_t __size)
              ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
Fri Mar 26 18:58:57 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:39: error: expected expression before ‘List’
   List * lista = (List *)calloc(NULL, List);
                                       ^~~~
list.c:32:33: error: passing argument 1 of ‘calloc’ makes integer from pointer without a cast [-Werror=int-conversion]
   List * lista = (List *)calloc(NULL, List);
                                 ^~~~
In file included from test.c:2:0:
/usr/include/stdlib.h:541:14: note: expected ‘size_t {aka long unsigned int}’ but argument is of type ‘void *’
 extern void *calloc (size_t __nmemb, size_t __size)
              ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
Fri Mar 26 18:59:06 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:36: error: expected expression before ‘List’
   List * lista = (List *)calloc(1, List);
                                    ^~~~
Compilation failed
Fri Mar 26 19:00:59 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
218cdb5
Fri Mar 26 19:01:11 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cfacb72
Fri Mar 26 19:10:47 UTC 2021: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|5
total_score: 10/70
378acaf
Fri Mar 26 19:19:54 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
330f627
Fri Mar 26 19:23:09 UTC 2021: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  1|5
total_score: 10/70
241d68b
Fri Mar 26 19:34:38 UTC 2021: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
40ae1af
